--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "dependencies": {
     "@ant-design/compatible": "0.0.1-rc.1",
     "@ant-design/icons": "4.0.0",
-    "antd": "^4.0.1",
+    "antd": "^4.0.3",
     "dplayer": "^1.25.0",
-    "dva": "^2.6.0-beta.6",
     "eventsource": "^1.0.7",
     "hls.js": "^0.13.2",
-    "mockjs": "^1.1.0",
     "rc-queue-anim": "^1.8.3",
     "rc-tween-one": "^2.6.8",
     "react": "^16.8.6",
@@ -23,10 +21,10 @@
     "react-dom": "^16.8.6",
     "react-resize-detector": "^4.2.1",
     "react-virtualized": "^9.21.2",
-    "roadhog-api-doc": "^1.1.2",
     "umi-request": "^1.2.19"
   },
   "devDependencies": {
+    "@umijs/preset-react": "^1.4.6",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
@@ -34,11 +32,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "mockjs": "^1.1.0",
     "react-test-renderer": "^16.7.0",
-    "umi": "^2.7.7",
-    "umi-plugin-react": "^1.8.4"
+    "roadhog-api-doc": "^1.1.2",
+    "umi": "^3.0.12"
   },
   "lint-staged": {
     "*.{js,jsx}": [
