--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "test": "umi test",
+    "start": "UMI_ENV=dev umi dev",
+    "build:dev": "UMI_ENV=dev umi build",
+    "build": "UMI_ENV=pro umi build",
+    "test": "UMI_ENV=dev umi test",
     "lint": "eslint {src,mock,tests}/**/*.{js,jsx} --fix",
     "precommit": "lint-staged"
   },
